fixes timeline on mobile

--- a/sites/all/themes/slac/css/style.css
+++ b/sites/all/themes/slac/css/style.css
@@ -10711,7 +10711,7 @@ a[href^="https://www-internal"]:after, a[href^="https://www-internal"]:hover:aft
   width: 100%;
   height: auto; }
 
-@media only screen and (max-width: 768px) and (min-width: 576px) {
+@media only screen and (max-width: 960px) and (min-width: 576px) {
   .card-deck .card {
     /* margin-bottom: 15px; */
     /* flex: 0 0 29.333333%; */
@@ -10721,7 +10721,7 @@ a[href^="https://www-internal"]:after, a[href^="https://www-internal"]:hover:aft
     min-width: 21.8rem;
     max-width: 21.8rem; } }
 
-@media (min-width: 769px) {
+@media (min-width: 961px) {
   .card-deck .card {
     flex: 1 0 0%;
     margin-right: 15px;
