--- a/sites/all/themes/slac/scss/components/_cards.scss
+++ b/sites/all/themes/slac/scss/components/_cards.scss
@@ -4,7 +4,7 @@
 }
 
 .card-deck .card {
-  @media only screen and (max-width: 768px) and (min-width: 576px) {
+  @media only screen and (max-width: 960px) and (min-width: 576px) {
     /* margin-bottom: 15px; */
     /* flex: 0 0 29.333333%; */
     margin-bottom: 15px;
@@ -16,7 +16,7 @@
 }
 
 .card-deck .card {
-  @media (min-width: 769px) {
+  @media (min-width: 961px) {
     flex: 1 0 0%;
     margin-right: 15px;
     margin-bottom: 0;
